# agentic-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  .stylelintrc.cjs  AGENTS.md  Dockerfile  IMPLEMENTAION_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  alembic.ini  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  run_output.md  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
app/: agents.py  api.py  db.py  document_dag.py  graph.py  mcp.py  overlay_agent.py  perplexity.py  persistence.py  primary_agent.py  utils.py  workflow.py
app/graph/: builder.py  state.py
app/prompts/: __init__.py  draft.yaml  overlay.yaml  pedagogy_critic.txt  plan.yaml  planner.txt  qa_reviewer.txt  research.yaml  researcher.txt  review.yaml  system.yaml  tools.yaml  user.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLI_REFERENCE.md  CODING_REQUIREMENTS.md  DEPLOYMENT.md  DESIGN.md  GOVERNANCE.md  IMPLEMENTATION_PLAN.md  MIGRATION_GUIDE.md  MODULE_OVERVIEW.md  SECURITY.md  TEST_PLAN.md  agents.md  architecture.md  streaming.md
frontend/: index.html  sse-test.html
frontend/src/: App.tsx  index.css  index.tsx  main.tsx
migrations/: env.py
migrations/versions/: 20250804_create_documents_table.py  20250804_create_state_table.py  20250805_create_citations_action_logs_metrics_tables.py  20250806_create_lectures_table.py
openai/: __init__.py
openai_stub/: __init__.py
scripts/: __init__.py  benchmark_pipeline.py  build_frontend.sh  cli.sh  docker-entrypoint.sh  reset_db.sh  run.sh  run_demo.py  test_resume.sh
src/: __init__.py  config.py  langgraph.json  observability.py  prompts.json  prompts.py
src/agentic_demo/: __init__.py  config.py  greeting.py
src/agents/: __init__.py  agent_wrapper.py  approver.py  cache_backed_researcher.py  content_rewriter.py  content_weaver.py  copyright_filter.py  critics.py  dense_retriever.py  editor.py  exporter.py  fact_checker.py  final_reviewer.py  json_utils.py  learning_advisor.py  model_utils.py  models.py  offline_cache.py  pedagogy_critic.py  planner.py  researcher_pipeline.py  researcher_web.py  researcher_web_node.py  researcher_web_runner.py  streaming.py
src/cli/: __init__.py  generate_lecture.py
src/config/: thresholds.yaml
src/core/: __init__.py  agents.py  checkpoint.py  document_dag.py  document_graph.py  logging.py  models.py  orchestrator.py  policies.py  regenerator.py  settings.py  state.py
src/export/: __init__.py  docx_exporter.py  markdown.py  markdown_exporter.py  metadata_exporter.py  pdf_exporter.py  zip_exporter.py
src/metrics/: alerts.py  collector.py  models.py  repository.py
src/models/: __init__.py  action_log.py  citation.py  critique_report.py  fact_check_report.py
src/persistence/: __init__.py  database.py  db.py  logs.py  manager.py  models.py  parquet_schema.py  parquet_serializer.py  sqlite.py
src/pydantic/: __init__.py  dataclasses.py
src/schemas/: lecture_schema.json  session_schema.json
src/web/: __init__.py  alert_endpoint.py  auth.py  health_endpoint.py  main.py  metrics_endpoint.py  researcher_web.py  routes.py  sse.py  telemetry.py
tests/: _test_config.py  commandPalette.test.tsx  conftest.py  controlsPanel.test.tsx  dataEntryForm.test.tsx  diffUtils.test.ts  documentPanel.test.tsx  downloadsPanel.test.tsx  golden_graph.json  logPanel.test.tsx  sourcesPanel.test.tsx  test_agent_async.py  test_agents.py  test_agents_init.py  test_alert_evaluation.py  test_alert_webhook.py  test_api.py  test_auth.py  test_authority_and_filter.py  test_chat_removed.py  test_checkpoint.py  test_checkpoint_resume.py  test_checkpoint_saver.py  test_citation_repo.py  test_citation_routes.py  test_cli_logging.py  test_compile_checkpoint.py  test_config.py  test_content_weaver.py  test_control_routes.py  test_core_init.py  test_critic.py  test_db.py  test_dockerfile.py  test_document_dag.py  test_document_graph.py  test_docx_exporter.py  test_entries.py  test_export_endpoints.py  test_export_init.py  (+60 more)
tests/agents/: test_agent_wrapper.py  test_approver.py  test_cache_backed_researcher.py  test_content_weaver.py  test_exporter.py  test_fact_checker.py  test_llm_failures.py  test_offline_cache.py  test_pedagogy_critic.py  test_planner.py
tests/core/: test_checkpoint_manager.py  test_core_orchestrator.py  test_langsmith_client.py  test_nodes_and_orchestrator.py  test_orchestrator.py  test_policies.py  (+1 more)
web/: __init__.py  router.py
(+74 files in other folders)
