[project]
name = "agentic-demo"
version = "0.1.0"
description = "LangGraph Lecture Builder"
authors = [
    {name = "Jolyon Suthers",email = "201621+fenrick@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">= 3.11,<4"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "aiosqlite (>=0.19,<1.0)",
    "httpx (>=0.26,<1.0)",
    "python-docx (>=0.8,<1.0)",
    "markdown (>=3.6,<4.0)",
    "weasyprint (>=62,<63)",
    "fastapi (>=0.111,<1.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "langgraph (>=0.6.3,<0.7.0)",
    "langgraph-sdk (>=0.2.0,<0.3.0)",
    "langchain (>=0.3.7,<0.4.0)",
    "langchain-openai (>=0.3.0,<0.4.0)",
    "langchain-perplexity (>=0.1.2,<0.2.0)",
    "jsonschema (>=4.25.0,<5.0.0)",
    "sse-starlette (>=3.0.2,<4.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
pre-commit = "^4.2.0"
ruff = ">=0.4"
mypy = ">=1.8"
bandit = ">=1.7"
pip-audit = ">=2.7"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "httpx",
    "aiosqlite",
]
